<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="filler">Random BS</string>
	
    <!-- Welcome screen-->
    <string name="app_name">FaceOff</string>
    <string name="title">Challenges</string>
    <string name="button_add">+</string>
    <string name="menu_settings">Settings</string>
    <string name="countdown">Countdown</string>
    <!--Challenge Activity-->
    <string name="opponent_name_text">Who will you challenge?</string>
    <string name="opponent_name_edtext">Name of Opponent</string>
    <string name="edit_message">Enter names...</string>
    <string name="add_challenge_finish">Done</string>
    <string name="challenge_name">What are you drinking?</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="drink">Drink?</string>
    <string name="time">What time limit?</string>
    <string name="time_limit">Enter time limit</string>
    <string name="start_button">Start!</string>

</resources>