<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ChallengeActivity" >
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/opponent_name_text" />
    
    <EditText android:id="@+id/names"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/challenge_name" />
    
    <EditText android:id="@+id/what_drink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drink" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time" />
    
    <EditText android:id="@+id/time_set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_limit" />

    <Button
        android:id="@+id/start_new_challenge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:onClick="createChallenge" />
</LinearLayout>