<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeScreen" >

    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:layout_weight="1"
        	android:text="@string/title" />
        
        <Button 
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	   		android:text="@string/button_add"
	    	android:onClick="addChallenge" />
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filler"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time"/>
    
    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown" />

</LinearLayout>